dim/spec/test_input/invalid_input/modules/duplicate_meta2.dim
module: ABC

metadata: Description 2
